# MagicCards

./: CMakeLists.txt  Readme.md  main.cpp  server.cpp
libs/card/: card.h
libs/database/: database.cpp  database.h
libs/player/: player.cpp  player.h
libs/server/: play.cpp  play.h
luaCards/: cotton_swab.lua  magic_powder.lua
